# sipstress

./: .gitignore  CLI_GUIDE.md  README.md  pyproject.toml  requirements.txt
examples/: invite_stress.yaml  options_health.yaml  sample.config.yaml
sipstress/: __init__.py  __main__.py  cli.py
sipstress/analysis/: __init__.py  health.py
sipstress/engine/: __init__.py  call.py  metrics.py  runner.py  scheduler.py
sipstress/media/: __init__.py  microphone.py  pcmu_encode.py  rtp.py
sipstress/plan/: __init__.py  executor.py  loader.py  spec.py
sipstress/reports/: __init__.py  console.py  html_dashboard.py  html_to_pdf.py  json_report.py  summary.py
sipstress/scenarios/: __init__.py  invite.py  invite_media.py  ivr.py  library.py  options.py  register.py
sipstress/sip/: __init__.py  auth.py  message.py  sdp.py  transport.py
tests/: mock_sip_server.py  test_html_dashboard.py  test_smoke.py
